--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -92,6 +92,7 @@
     &__video{
       width: 100%;
       transform: none;
+      filter: none;
     }
     &__text-container{
       margin-top: 20rem;
