--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -251,6 +251,14 @@
   }
 }
 
+@media(max-width:425px){
+  .sponsors {
+    &__img {
+      height: 12rem;
+    }
+  }
+}
+
 .sponsors-temp{
   position: relative;
   background: linear-gradient(90deg, #19864a 0%, #0a8240 100%);
@@ -324,5 +332,6 @@
     height: 15rem;
     margin-bottom: -1rem;
     margin-right: 1rem;
+    filter: brightness(0.8);
   }
 }
