--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,9 +3,9 @@
   padding: 0;
   box-sizing: inherit;
 }
-.why-table{
-  display: none;
-}
+// .why-table{
+//   display: none;
+// }
 .testimonial{
   display: none;
 }
