--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -344,4 +344,10 @@
     margin-right: 1rem;
     filter: brightness(0.8);
   }
+  .heading-secondary{
+    span{
+      color: $color-red;
+      display: inline;
+    }
+  }
 }
