--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,9 +6,9 @@
 // .why-table{
 //   display: none;
 // }
-.testimonial{
-  display: none;
-}
+// .testimonial{
+//   display: none;
+// }
 
 html {
   font-size: 62.5%;
