--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -110,7 +110,7 @@
   // }
 
   .row {
-    .col-6{
+    .col-12{
       display: flex;
       padding-left: 0;
       &:not(:last-child){
@@ -147,6 +147,25 @@
     position: absolute;
     top: -3rem;
     left: 5rem;
+  }
+}
+
+@media(max-width: 768px){
+  .testimonial{
+    &__container{
+      padding: 8rem 5rem;
+      
+    }
+    .row {
+      .col-12{
+        display: flex;
+        padding-left: 15px;
+        padding-right: 15px;
+        &:not(:last-child){
+          margin-bottom: 2rem;
+        }
+      }
+    }
   }
 }
 
