Added Sponsors Page

--- a/css/main.css
+++ b/css/main.css
@@ -4341,6 +4341,11 @@ a {
 
 .sponsors .row {
   justify-content: center;
+  margin-bottom: 8rem;
+}
+
+.sponsors__img {
+  height: 13rem;
 }
 
 .sponsors__img:not(:last-child) {
@@ -4376,16 +4381,28 @@ a {
   margin-bottom: 8rem;
 }
 
+.sponsors .btn {
+  display: block;
+  margin: 0 auto;
+  background-color: #fff;
+  color: #1bb35f;
+  font-weight: 700;
+}
+
 @media (max-width: 425px) {
   .sponsors__img {
     height: 12rem;
+  }
+  .sponsors .btn {
+    letter-spacing: 1px;
+    width: 20rem;
   }
 }
 
 .sponsors-temp {
   position: relative;
   background: linear-gradient(90deg, #19864a 0%, #0a8240 100%);
-  padding: 10rem 0 5rem 0;
+  padding: 10rem 0;
 }
 
 .why-table {
@@ -4393,7 +4410,8 @@ a {
 }
 
 .why-table .heading-secondary {
-  transform: rotateZ(-90deg);
+  text-align: center;
+  margin-bottom: 4rem;
 }
 
 .why-table .heading-secondary span {
@@ -4403,7 +4421,7 @@ a {
 .why-table table {
   background-color: black;
   z-index: 1;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   border-collapse: collapse;
   border: 2px solid white;
@@ -4649,6 +4667,7 @@ a {
 
 @media (max-width: 768px) {
   .why-table .heading-secondary {
+    text-align: left;
     transform: none;
     margin-bottom: 4rem;
   }
@@ -4665,7 +4684,12 @@ a {
   height: 15rem;
   margin-bottom: -1rem;
   margin-right: 1rem;
-  filter: brightness(0.8);
+  opacity: 0.8;
+  transition: all .1s;
+}
+
+.sponsors-prev .sponsors__img:hover {
+  opacity: 1;
 }
 
 .sponsors-prev .heading-secondary span {
