--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -63,7 +63,7 @@
 @media(max-width: 1024px){
   .nav{
     &__list{
-      border: 1px solid $color-red;
+      width: calc(100% - 6rem);
       border-radius: 4px;
       padding: 4rem 5rem 0 0;
       background-color: black;
@@ -71,10 +71,9 @@
       align-items: flex-end;
       right: 3rem;
       top: 9rem;
-      min-width: 30rem;
-      flex-basis: 30rem;
       display: none;
-      background-color: $color-red;
+      // background-color: $color-red;
+      background: linear-gradient(90deg, rgba(25,134,74,1) 0%, rgba(10,130,64,1) 100%);
     }
     
     &__icons{
@@ -103,10 +102,14 @@
       animation: rotateIn 0.625s ease;
     }
     &__item{
-      font-size: 1.8rem;
-      margin: 0 0 4rem 0 !important;
+      font-size: 1.6rem;
+      font-weight: 500;
+      margin: 0 0 2.5rem 0 !important;
+      a{
+        color: black;
+      }
       &--reg{
-        border: 3px solid white;
+        border: 2px solid black;
       }
     }
   }
