--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-blue: #1bb35f;
 $color-orange: #FF6B35;
 $color-purple: rgb(27, 179, 95);
 $color-red: #1bb35f;
+$color-red-dark: #169b52;
 
 // $color-pink: #FF00AA;
 // $color-blue: #2176FF;
