--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 
 @import "components/button";
 @import "components/img-grid";
+@import "components/get-notified";
 @import "components/loader";
 @import "components/scheduler";
 @import "components/shapes";
