--- a/css/main.css
+++ b/css/main.css
@@ -3726,6 +3726,14 @@ a {
   }
 }
 
+.notification {
+  padding: 24rem 0 13rem 0 !important;
+}
+
+.notification .heading-secondary {
+  font-size: 4rem;
+}
+
 .get-notified__form {
   font-size: 1.2rem;
   display: flex;
@@ -3735,7 +3743,7 @@ a {
 .get-notified__input {
   font-size: inherit;
   padding: 1.3rem 1.8rem;
-  width: 46rem;
+  width: 53rem;
   border-radius: 4px;
   border: none;
   outline: none;
@@ -3744,7 +3752,7 @@ a {
 
 .get-notified__submit {
   font-size: inherit;
-  width: 10rem;
+  width: 12rem;
   border-radius: 4px;
   border: none;
   outline: none;
